--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="./index.css" rel="stylesheet">
 </head>
 <body>
     <div id="root">
-        <h2>code</h2>
+        <h2 class="text-3xl font-bold underline">code</h2>
     </div>
     <script type="module" src="app.js"></script>
 </body>
